hw03-annotations review