@@ -3,56 +3,57 @@ import annotations.Before;
 import annotations.Test;
 
 import java.lang.annotation.Annotation;
-import java.lang.reflect.Constructor;
 import java.lang.reflect.Method;
 
 
 public class Runner {
 
-    public static void main(String[] args) throws Exception {
+    private final Class<?> testClass;
+    private final Object testInstance;
 
-        Class<?> testClass = Class.forName("testing.AnnotationTest");
-        Constructor<?> constructor = testClass.getConstructor();
-        Object testInstance = constructor.newInstance();
+    Runner(String testName) throws Exception {
+        testClass = Class.forName(testName);
+        testInstance = testClass.getConstructor().newInstance();
+    }
 
-        int passed = 0;
-        if (runBeforeMethod(testInstance)) passed += 1;
-        if (runTestMethod(testInstance)) passed += 1;
-        if (runAfterMethod(testInstance)) passed += 1;
+    public void runTestClass() {
+        StringBuilder exceptions = new StringBuilder();
+
+        int passed = isMethodPassed(testInstance, Before.class, exceptions) +
+                    isMethodPassed(testInstance, Test.class, exceptions) +
+                    isMethodPassed(testInstance, After.class, exceptions);
 
         int total = testClass.getDeclaredMethods().length;
         int failed = total - passed;
-        System.out.println(
-                "\nREPORT:" +
-                "\nTests total: " + total +
-                "\nTests passed: " + passed +
-                "\nTests failed: " + failed);
+
+        printStats(total, passed, failed, exceptions.toString());
+
     }
 
-    private static boolean runBeforeMethod(Object test) {
-        return getMethodByAnnotationAndInvoke(test, Before.class);
-    }
-
-    private static boolean runTestMethod(Object test) {
-        return getMethodByAnnotationAndInvoke(test, Test.class);
-    }
-
-    private static boolean runAfterMethod(Object test) {
-        return getMethodByAnnotationAndInvoke(test, After.class);
-    }
-
-    private static boolean getMethodByAnnotationAndInvoke(Object test, Class<? extends Annotation> annotation) {
+    private static int isMethodPassed(Object test, Class<? extends Annotation> annotation, StringBuilder exception) {
         try {
             for (Method method : test.getClass().getDeclaredMethods()) {
                 if (method.isAnnotationPresent(annotation)) {
                     method.invoke(test);
                 }
             }
-            return true;
+            System.out.println("Passed");
+            return 1;
         }
         catch (Exception e) {
-            System.out.printf("Failure: %s in method %s\n", e.getCause(), annotation.getName());
-            return false;
+            System.out.println("Failed");
+            exception.append(String.format("%s in method %s\n", e.getCause(), annotation.getName()));
+            return 0;
         }
+    }
+
+    private static void printStats(int total, int passed, int failed, String exceptions) {
+        System.out.println(
+                "\nREPORT:" +
+                "\nTests total: " + total +
+                "\nTests passed: " + passed +
+                "\nTests failed: " + failed
+        );
+        System.out.println("\nFailed tests:\n" + exceptions);
     }
 }
